# CMake_class

my_first_cmake_project/: CMakeLists.txt
my_first_cmake_project/my_first_cmake_program/: CMakeLists.txt  my_first_cmake_program.cpp  my_first_cmake_program.h
task2_the_project_is_more/: CMakeLists.txt
task2_the_project_is_more/Debug/: task3_class_hierarchy.exe.recipe  task3_class_hierarchy.ilk  task3_class_hierarchy.vcxproj.FileListAbsolute.txt  vc143.idb
task2_the_project_is_more/Debug/task3_cl.56a1615b.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  task3_class_hierarchy.lastbuildstate
