cmake_minimum_required(VERSION 3.8)

project(task2_the_project_is_more)

add_executable(task2_the_project_is_more task3_class_hierarchy.cpp figure.cpp figure.h triangle.cpp triangle.h quadrilateral.cpp quadrilateral.h right_tri.cpp right_tri.h isosceles_tri.cpp isosceles_tri.h equilateral_tri.cpp equilateral_tri.h parallelogram.cpp parallelogram.h rectangle.cpp rectangle.h rhomb.cpp rhomb.h quadrate.cpp quadrate.h)